// Copyright (c) 2018, AT&T Intellectual Property.  All rights reserved.
//
// SPDX-License-Identifier: LGPL-2.1-only

syntax="proto2";

message DataplaneEnvelope {
	required string type = 1; //unique message name
	required bytes msg = 2;   //message
}